aws-asg-efs/igw.tf
resource "aws_internet_gateway" "gw" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = var.igw_name
    }
}
